# cloud_function

./: Result_Weather.csv  load.py  main.py  pyproject.toml  transform.py
